# ak_requests

./: .gitignore  README.md  development.ipynb  pyproject.toml
.github/workflows/: docs.yml  test.yml  test.yml-NOTUSED
docs/: ak_requests.html  docs.bat  index.html  search.js
docs/ak_requests/: adapters.html  beautifulsoup.html  data.html  logger.html  request.html  utils.html
src/ak_requests/: __init__.py  adapters.py  authenticator.py  beautifulsoup.py  data.py  logger.py  request.py  utils.py
src/tests/: test_request.py
