[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_requests"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests",
    "beautifulsoup4",
]

[project.optional-dependencies]
test = [
    "pytest"
]

dev = [
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_requests"