[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_requests"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "yt-dlp>=2023.10.13"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3"
]

dev = [
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_requests"