[project]
name = "ak_requests"
version = "0.1.1"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "yt-dlp>=2023.10.13"
]

[project.urls]
Home = "https://github.com/rpakishore/ak_requests"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pdoc>=15.0.1",
    "ruff>=0.9.1",
]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.dynamic]
description = {file = "README.md"}
